package com.logmate.webhook.model;

public enum WebhookType {
    SLACK, DISCORD, CUSTOM
}
